[gd_scene load_steps=9 format=3 uid="uid://ckwjpw38i8rea"]

[ext_resource type="Texture2D" uid="uid://cp1scwing4rtl" path="res://Art/Character/Player.png" id="1_um8lo"]
[ext_resource type="Script" uid="uid://cfeil3j8bfer1" path="res://Scripts/Player.gd" id="1_x3d5u"]
[ext_resource type="PackedScene" uid="uid://dlmm8nmlufcou" path="res://Prefabs/Hand/RegularHand.tscn" id="3_b43ah"]
[ext_resource type="Script" uid="uid://wfet8n3t44uv" path="res://HealthComponent.gd" id="4_shmu5"]
[ext_resource type="Texture2D" uid="uid://i1hks608wcnn" path="res://Art/Hands/RegularGloveOffhand.png" id="4_vxq8l"]
[ext_resource type="Texture2D" uid="uid://c5r83gpebyl51" path="res://Art/Particles/BubbleEffect.png" id="6_gg3t4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b43ah"]
radius = 66.0681

[sub_resource type="Curve" id="Curve_javds"]
_data = [Vector2(0.107955, 0), 0.0, 0.0, 0, 0, Vector2(0.3125, 0.865169), 0.0, 0.0, 0, 0, Vector2(1, 0.0337079), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["Player"]]
self_modulate = Color(1.2, 10, 1.2, 1)
script = ExtResource("1_x3d5u")

[node name="Head" type="Sprite2D" parent="."]
texture = ExtResource("1_um8lo")

[node name="LeftHand" type="Node2D" parent="."]

[node name="Fist1" parent="LeftHand" instance=ExtResource("3_b43ah")]
position = Vector2(21, -97)

[node name="RightHand" type="Node2D" parent="."]
position = Vector2(19, 93)
scale = Vector2(1, -1)

[node name="Fist2" parent="RightHand" instance=ExtResource("3_b43ah")]
texture = ExtResource("4_vxq8l")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.9, 0.9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b43ah")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_shmu5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ResetParticle" type="CPUParticles2D" parent="."]
emitting = false
amount = 1
texture = ExtResource("6_gg3t4")
one_shot = true
speed_scale = 3.0
use_fixed_seed = true
seed = 883703761
local_coords = true
gravity = Vector2(0, 0)
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_javds")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
